--- a/packme/app/views/users/login.html.erb
+++ b/packme/app/views/users/login.html.erb
@@ -6,7 +6,22 @@
 
 <body>
 	<p>Login here.</p>
+
+	<% if flash[:notice] %>
+		<p><%= flash[:notice] %></p>
+	<% end %>
+
+	<%= form_tag("post_login", method: "post") do %>
+		<%= label_tag(:username, "Username:") %>
+		<%= text_field_tag(:username) %>
+		<br />
+		<%= label_tag(:password, "Password:") %>
+		<%= password_field_tag(:password) %>
+		<br />
+		<%= submit_tag("Login") %>
+	<% end %>
+
+	<p><a href="<%= url_for :controller => :users, :action => :new %>">New User</a></p>
 </body>
 
 
-<a href="<%= url_for :controller => :users, :action => :new %>">New User</a>
